[Finishes #186437407] Finished the home page

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -18,23 +18,23 @@
 
     <img src="/pictures/drBlank.jpg" alt="Dr. Robert (Bob) Blank">
     <h3>Dr.Blank</h3>
-    <p>Here is out lead veterinarian Dr. Blank! He is great with pets of all types, well, except for any reptile, those go to Dave. Dr. Blank went to the most prestegous school for any veterinarian, <a href="https://www.wkkellogg.com/en-us/our-foods/our-brands/rice-krispies.html">UC Davis</a>.</p>
+    <p class="desc">Here is out lead veterinarian Dr. Blank! He is great with pets of all types, well, except for any reptile, those go to Dave. Dr. Blank went to the most prestegous school for any veterinarian, <a href="https://www.wkkellogg.com/en-us/our-foods/our-brands/rice-krispies.html">UC Davis</a>.</p>
 
     <img src="/pictures/guy-holding-lizard.jpg" alt="Dave the lizard guy">
     <h3>Dave</h3>
-    <p>We honestly don't know anything about Dave, only that he comes in on Tuesdays and takes care of the lizards, because Dr.Blank said and I quote, "Lizards creep me out, just like Dave."</p>
+    <p class="desc">We honestly don't know anything about Dave, only that he comes in on Tuesdays and takes care of the lizards, because Dr.Blank said and I quote, "Lizards creep me out, just like Dave."</p>
 
     <img src="/pictures/Female-vet-with-puppy.jpg" alt="Grace, one of two vet techs">
     <h3>Grace</h3>
-    <p>Grace here is one of two vet tech in out clinic. "I just saw a "Help Wanted" sign and applied." A quote from Grace.</p>
+    <p class="desc">Grace here is one of two vet tech in out clinic. "I just saw a "Help Wanted" sign and applied." A quote from Grace.</p>
 
     <img src="/pictures/vettech.jpg" alt="Izzy, ywo of two vet techs">
     <h3>Izzy</h3>
-    <p>"I was just following my friend Grace here after we done at the bar. Turns out she was drunk when they hired her."</p>
+    <p class="desc">"I was just following my friend Grace here after we done at the bar. Turns out she was drunk when they hired her."</p>
 
     <img src="/pictures/receptionist-1.jpg" alt="Margret, the senseable one">
     <h3>Margret</h3>
-    <p>"All of these people are just plain stupid. Couldn't even tell a raccoon from a dog if they saw one."</p>
+    <p class="desc">"All of these people are just plain stupid. Couldn't even tell a raccoon from a dog if they saw one."</p>
 
   </div>
 
