--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,17 +6,12 @@
   <%- include('css/indexCss'); %>
   <title>Blank's Veterinary Clinic</title>
 </head>
+
 <body id="body">
 
   <%- include('header'); %>
 
-  <div id="header"></div>
-
-  <div id="main">
-    <p>
-      [Generic Main Text Here]
-    </p>
-  </div>
+  <img src="/pictures/homePage.jpg" alt="Home Page" width="700px" height="700px">
 
   <%- include('footer'); %>
   
