--- a/views/css/indexCss.ejs
+++ b/views/css/indexCss.ejs
@@ -7,4 +7,37 @@ body{
   border: 2px black solid;
   font-family: 'Comic Sans MS';
 }
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+  img {
+    width: 100%;
+    height: 100%;
+  }
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+  img {
+    width: 100%;
+    height: 100%;
+  }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+  img {
+    width: 100%;
+    height: 100%;
+  }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+  img {
+    width: 100%;
+    height: 100%;
+  }
+}
+
 </style>
