--- a/views/css/wwCss.ejs
+++ b/views/css/wwCss.ejs
@@ -20,4 +20,12 @@ form input{
   width: auto;
   margin-left: 80%;
 }
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+ form input{
+  width: 180px;
+ } 
+}
+
 </style>
