--- a/views/css/aboutCss.ejs
+++ b/views/css/aboutCss.ejs
@@ -61,7 +61,7 @@ img {
   }
 
   /* Large devices (laptops/desktops, 992px and up) */
-  @media only screen and (min-width: 992px) {
+  @media only screen and (min-width: 992px) and (max-width: 1030px) {
     img{
       width: 20%;
       height: 20%;
@@ -69,7 +69,8 @@ img {
     }
 
     .desc{
-      margin-bottom: 250px;
+      margin-bottom: 300px;
+      margin-right: 20px;
     }
   }
 
