--- a/views/css/indexCss.ejs
+++ b/views/css/indexCss.ejs
@@ -17,7 +17,7 @@ body{
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 600px) and (max-width: 768px){
   img {
     width: 100%;
     height: 100%;
@@ -25,15 +25,7 @@ body{
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) {
-  img {
-    width: 100%;
-    height: 100%;
-  }
-}
-
-/* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px) {
+@media only screen and (min-width: 768px) and (max-width: 992px){
   img {
     width: 100%;
     height: 100%;
