[Finishes #186458171] Added margin-top for button.

--- a/views/css/resourceCss.ejs
+++ b/views/css/resourceCss.ejs
@@ -120,6 +120,10 @@ header nav a:hover {
     height: 200px;
   }
 
+  .zip-input-container button {
+    margin-top: 15px;
+  }
+
   /* Stack nav links vertically */
   header nav a {
     display: block;
