--- a/views/createAccount.ejs
+++ b/views/createAccount.ejs
@@ -13,7 +13,7 @@
   <div id="main">
     <h2>Create an Account:</h2>
     <p>
-      <form>
+      <form action="/createAccount" method="POST">
         <label for="fname">First name:</label><br>
         <input type="text" id="fname" name="fname"><br>
 
@@ -24,9 +24,9 @@
         <input type="text" id="email" name="email"><br>
 
         <label for="password">Password:</label><br>
-        <input type="text" id="password" name="lname"><br>
+        <input type="text" id="password" name="password"><br>
 
-        <button>Create Account</button>
+        <button type="submit">Create Account</button>
       </form>
     </p>
   </div>
