--- a/views/header.ejs
+++ b/views/header.ejs
@@ -43,10 +43,11 @@
   
     <nav>
         <ul>
-            <li><a href="index.ejs">Home</a></li>
-            <li><a href="WellnessWizard.ejs">Wellness Wizard</a></li>
-            <li><a href="resources.ejs">Resources</a></li>
-            <li><a href="about.ejs">About</a></li>
+            <li><a href="/">Home</a></li>
+            <li><a href="/WellnessWizard.ejs">Wellness Wizard</a></li>
+            <li><a href="/resources.ejs">Resources</a></li>
+            <li><a href="/about.ejs">About</a></li>
+            <li><a href="/login.ejs">Login</a></li>
           </ul>
     </nav>
 </header>
