[Finishes #186513043] Almost all done!

--- a/views/css/aboutCss.ejs
+++ b/views/css/aboutCss.ejs
@@ -1,5 +1,5 @@
 <style>
-img {
+  img {
     width: 300px;
     height: 300px;
     float: left;
@@ -19,6 +19,16 @@ img {
     text-align: justify;
     margin-bottom: 300px;
     margin-right: auto;
+  }
+
+  a {
+    text-decoration: none;
+    color: #00bfff;
+    transition: color 0.3s;
+  }
+
+  a:hover {
+    color: #808080;
   }
 
   /* Extra small devices (phones, 600px and down) */
