update to README, added route to employee login and temp link to employee login in nav

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -83,6 +83,7 @@
       <li><a href="/WellnessWizard.ejs">Wellness Wizard</a></li>
       <li><a href="/resources.ejs">Resources</a></li>
       <li><a href="/about.ejs">About</a></li>
+      <li><a href="/employeeLogin.ejs">Employee Login</a></li>
     </ul>
   </nav>
 
