--- a/views/createAccount.ejs
+++ b/views/createAccount.ejs
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/index.css">
+  <%- include('css/indexCss'); %>
+  <%- include('css/createAccountCss.ejs'); %>
   <title>Blank's Veterinary Clinic</title>
 </head>
 <body id="body">
