--- a/views/login.ejs
+++ b/views/login.ejs
@@ -20,7 +20,7 @@
       <p style="color: red;"><%= errorMessage %></p>
     <% } %>
     
-    <h2>Login:</h2>
+    <h2>Patient Login:</h2>
     <p>
       <form action="/login" method="POST">
         <label for="email">Email:</label><br>
@@ -34,6 +34,9 @@
     </p>
     <p>
       Don't have an account? <a href="/createAccount.ejs">Create one here!</a>
+    </p>
+    <p>
+      <a href="/employeeLogin.ejs">Employee Login</a>
     </p>
   </div>
 
