Made some general fixes

--- a/views/createEmployeeAccount.ejs
+++ b/views/createEmployeeAccount.ejs
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/index.css">
+  <%- include('css/indexCss'); %>
   <title>Blank's Veterinary Clinic - Employee Account</title>
 </head>
 <body id="body">
 
-  <% include('header'); %>
+  <%- include('header'); %>
 
   <div id="main">
     <h2>Create an Employee Account:</h2>
@@ -25,7 +25,7 @@
     </p>
   </div>
 
-  <% include('footer'); %>
+  <%- include('footer'); %>
   
 </body>
 </html>
