Updated Clinic Locations on Map

--- a/views/resources.ejs
+++ b/views/resources.ejs
@@ -67,11 +67,12 @@
         // Define clinic locations
         var clinicLocations = [
           { id: 1, coordinates: [-91.4984941, 44.811349] }, // Eau Claire, WI
-          { id: 2, coordinates: [randomLon(), randomLat()] }, // Random Location 2
-          { id: 3, coordinates: [randomLon(), randomLat()] }, // Random Location 3
-          { id: 4, coordinates: [randomLon(), randomLat()] }, // Random Location 4
-          { id: 5, coordinates: [randomLon(), randomLat()] }, // Random Location 5
-        ];
+          { id: 2, coordinates: [-87.9064736, 43.0389025] }, // Milwaukee, WI
+          { id: 3, coordinates: [-89.4012302, 43.0730517] }, // Madison, WI
+          { id: 4, coordinates: [-88.019826, 44.519159] },   // Green Bay, WI
+          { id: 5, coordinates: [-87.657584, 44.261931] },   // Appleton, WI
+      ];
+
 
         // Initialize map
         var map = new ol.Map({
