Fixed employee login and added employee/user profile pages

--- a/views/employeeLogin.ejs
+++ b/views/employeeLogin.ejs
@@ -17,8 +17,8 @@
     <h2>Employee Login:</h2> 
     <p>
       <form action="/employee-login" method="POST">
-        <label for="employeeId">Employee ID:</label><br>
-        <input type="text" id="employeeId" name="employeeId" required><br>
+        <label for="employeeEmail">Employee Email:</label><br>
+        <input type="text" id="employeeEmail" name="employeeEmail" required><br>        
 
         <label for="password">Password:</label><br>
         <input type="password" id="password" name="password" required><br>
@@ -27,7 +27,7 @@
       </form>
     </p>
     <p>
-      Don't have an account? <a href="/createEmployeeAccount.ejs">Create one here!</a>
+      New Employee? <a href="/createEmployeeAccount.ejs">Create account here!</a>
     </p>
   </div>
 
