--- a/views/css/createAccountCss.ejs
+++ b/views/css/createAccountCss.ejs
@@ -17,4 +17,55 @@
         font-family: 'Comic Sans MS';   
         font-size: 15px;
     }
+        /* For Mobile */
+@media screen and (max-width: 540px) {
+    p {
+        font-size: 20px;
+    }
+    label {
+        font-size: 30px;
+    }
+    button {
+        padding-left: 30px;
+        padding-right: 30px;
+        padding-top: 25px;
+        padding-bottom: 25px;
+        font-size: 30px;
+    }
+    h2 {
+        font-size: 50px;
+    }
+    input {
+        height: 30px;
+    }
+    
+}
+
+/* For Tablets */
+@media screen and (min-width: 540px) and (max-width: 780px) {
+    p {
+        font-size: 18px;
+    }
+    label {
+        font-size: 25px;
+    }
+    button {
+        padding-left: 20px;
+        padding-right: 20px;
+        padding-top: 15px;
+        padding-bottom: 15px;
+        font-size: 30px;
+    }
+    h2 {
+        font-size: 40px;
+    }
+    input {
+        height: 22px;
+    }
+    form {
+        margin: auto;
+        padding-left: 120px;
+        padding-right: 120px;
+    }
+}
 </style>
