[Finishes #186512844] Added search bar

--- a/views/css/resourceCss.ejs
+++ b/views/css/resourceCss.ejs
@@ -61,7 +61,7 @@ header nav a:hover {
 /* Clinic locator map container */
 .map {
   width: 100%;
-  height: 300px; /* Adjust height as needed */
+  height: 300px; 
   margin-bottom: 1rem;
 }
 
@@ -133,8 +133,35 @@ header nav a:hover {
   /* Adjust padding and centering on mobile */
   #main {
     padding: 0.5rem;
-    max-width: none; /* Allow the main content to fill the screen on mobile */
+    max-width: none; 
   }
 }
+
+#search-container {
+  text-align: center; /* Or align as needed */
+  margin-bottom: 20px;
+}
+
+#searchBar {
+  padding: 10px;
+  margin-right: 10px;
+  font-size: 1em;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+}
+
+#search-container button {
+  padding: 10px 15px;
+  background-color: #00bfff;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+#search-container button:hover {
+  background-color: #009ddf;
+}
+
 
 </style>
