--- a/views/resources.ejs
+++ b/views/resources.ejs
@@ -70,66 +70,38 @@
       <br>
       <div id="map" class="map"></div>
       <script type="text/javascript">
-        // Define clinic locations
-        var clinicLocations = [
-          { id: 1, coordinates: [-91.4984941, 44.811349] }, // Eau Claire, WI
-          { id: 2, coordinates: [-87.9064736, 43.0389025] }, // Milwaukee, WI
-          { id: 3, coordinates: [-89.4012302, 43.0730517] }, // Madison, WI
-          { id: 4, coordinates: [-88.019826, 44.519159] },   // Green Bay, WI
-          { id: 5, coordinates: [-87.657584, 44.261931] },   // Appleton, WI
-      ];
 
-
+        var zipCodeToCoordinatesMap = {
+          '54701': [-91.4984941, 44.811349], // Eau Claire, WI
+          '53202': [-87.9064736, 43.0389025], // Milwaukee, WI
+          '53703': [-89.4012302, 43.0730517], // Madison, WI
+          '54301': [-88.019826, 44.519159],   // Green Bay, WI
+          '54911': [-87.657584, 44.261931],   // Appleton, WI
+        };
+      
         // Initialize map
         var map = new ol.Map({
-          target: 'map', // The id of the map container
+          target: 'map',
           layers: [
-            // Add a layer to use the OpenStreetMap map data
             new ol.layer.Tile({
               source: new ol.source.OSM()
             })
           ],
-          // Set the view to a specific location and zoom level
           view: new ol.View({
-            center: ol.proj.fromLonLat([37.41, 8.82]), // This should be the approximate center of the clinic locations
+            center: ol.proj.fromLonLat([37.41, 8.82]), // Center of the clinic locations
             zoom: 4
           })
         });
       
-        // Markers for each clinic location
-        clinicLocations.forEach(function(location) {
-          var clinicMarker = new ol.Feature({
-            geometry: new ol.geom.Point(ol.proj.fromLonLat(location.coordinates))
-          });
-
-          var vectorSource = new ol.source.Vector({
-            features: [clinicMarker]
-          });
-
-          var markerLayer = new ol.layer.Vector({
-            source: vectorSource,
-          });
-
-          map.addLayer(markerLayer);
-        });
-
-        // Generate random longitude values
-        function randomLon() {
-          return Math.random() * 360 - 180;
-        }
-
-        // Generate random latitude values
-        function randomLat() {
-          return Math.random() * 180 - 90;
-        }
-
-        // Focus on the nearest clinic based on the given zip code
         function focusOnNearestClinic() {
-          var zipCodeInput = document.getElementById('zip-code').value;
-          // Still needs the logic to determine the nearest location based on the zip code.
-          // For now, the map will be centered on Eau Claire, WI.
-          var eauClaireLocation = clinicLocations.find(location => location.id === 1).coordinates;
-          map.getView().animate({ center: ol.proj.fromLonLat(eauClaireLocation), zoom: 10 });
+          var zipCodeInput = document.getElementById('zip-code').value.trim();
+          var coordinates = zipCodeToCoordinatesMap[zipCodeInput];
+      
+          if (coordinates) {
+            map.getView().animate({ center: ol.proj.fromLonLat(coordinates), zoom: 10 });
+          } else {
+            alert("No clinic found for this zip code. Please enter a valid zip code.");
+          }
         }
       </script>
     </section>
